syntax = "proto3";

option csharp_namespace = "AuthService.Grpc.Protos";

package auth;

service AuthService {
    rpc Authenticate (AuthRequest) returns (AuthResponse);
    rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
    rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
}

message AuthRequest {
    string email = 1;
    string password = 2;
}

message AuthResponse {
    bool success = 1;
    string token = 2;
    string error = 3;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
    string error = 2;
}

message RegisterUserRequest {
    string userId = 1; 
    string email = 2;
    string password = 3;
    repeated string roles = 4;
}

message RegisterUserResponse {
    bool success = 1;
    string message = 2;
}
